@@ -58,6 +58,24 @@ this repository contains the full copyright notices and license terms. -->
             <field name="string">Create Shipping for Packages</field>
         </record>
 
+        <record model="ir.ui.view" id="shipment_internal_view_form">
+            <field name="model">stock.shipment.internal</field>
+            <field name="inherit" ref="stock.shipment_internal_view_form"/>
+            <field name="name">shipment_internal_form</field>
+        </record>
+
+        <record model="ir.ui.view" id="shipment_internal_view_list">
+            <field name="model">stock.shipment.internal</field>
+            <field name="inherit" ref="stock.shipment_internal_view_tree"/>
+            <field name="name">shipment_internal_list</field>
+        </record>
+
+        <record model="ir.model.button" id="shipment_internal_create_shipping_button">
+            <field name="model">stock.shipment.internal</field>
+            <field name="name">create_shipping</field>
+            <field name="string">Create Shipping for Packages</field>
+        </record>
+
         <record model="ir.action.wizard" id="act_create_shipping_wizard">
             <field name="name">Create Shipping</field>
             <field name="wiz_name">stock.shipment.create_shipping</field>
