@@ -1,0 +1,18 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/notebook" position="before">
+        <label name="carrier"/>
+        <field name="carrier"/>
+        <label name="shipping_reference"/>
+        <field name="shipping_reference"/>
+        <newline/>
+
+        <label name="shipping_description"/>
+        <field name="shipping_description" colspan="3"/>
+    </xpath>
+    <xpath expr="//group[@id='buttons']" position="inside">
+        <button name="create_shipping"/>
+    </xpath>
+</data>
