@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="//field[@name='reference']" position="after">
+        <field name="shipping_reference" expand="1" optional="1"/>
+    </xpath>
+</data>
