@@ -1,3 +1,4 @@
+* Manage internal shipment with transit
 
 Version 7.4.0 - 2024-11-04
 --------------------------
